--- a/package.json
+++ b/package.json
@@ -8,19 +8,28 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
     "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.39.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.2.1",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
-    "express-rate-limit": "^7.1.5"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
-  "keywords": ["skincare", "ai", "recommendations", "beauty"],
+  "keywords": [
+    "skincare",
+    "ai",
+    "recommendations",
+    "beauty"
+  ],
   "author": "XpertBuyer Team",
   "license": "MIT"
-} 
+}
