--- a/env.sample
+++ b/env.sample
@@ -1,17 +1,33 @@
 # Server Configuration
-PORT=3000
+PORT=5000
 NODE_ENV=development
 
 # Supabase Configuration
-SUPABASE_URL=your_supabase_project_url
+SUPABASE_URL=your_supabase_url
 SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_KEY=your_supabase_service_key
 
 # JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_here_make_it_very_long_and_random
+JWT_SECRET=your_jwt_secret_min_32_chars
 JWT_EXPIRES_IN=7d
 
 # Google Gemini API
-GEMINI_API_KEY=your_google_gemini_api_key
+GEMINI_API_KEY=your_gemini_api_key
+GEMINI_RATE_LIMIT=15
+GEMINI_CACHE_ENABLED=true
+GEMINI_CACHE_TTL_HOURS=24
+
+# Redis Configuration (for BullMQ)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Photo Processing
+PHOTO_WORKER_CONCURRENCY=2
 
 # CORS Configuration
-FRONTEND_URL=http://localhost:3000 
+FRONTEND_URL=http://localhost:3000
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100 
