--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@google-cloud/storage": "^7.16.0",
+    "@google-cloud/storage": "^6.11.0",
+    "@google-cloud/vision": "^3.3.0",
     "@google/generative-ai": "^0.21.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "bcryptjs": "^3.0.2",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@supabase/supabase-js": "^2.43.1",
+    "@tensorflow/tfjs-node": "^4.9.0",
+    "bcryptjs": "^2.4.3",
+    "bullmq": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.2.1",
-    "helmet": "^7.1.0",
-    "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.0",
-    "sharp": "^0.34.2",
-    "uuid": "^11.1.0"
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.0.1",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "p-retry": "^5.1.2",
+    "pg": "^8.11.0",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.0",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
